# helgoboss-learn

./: Cargo.toml  README.md
src/: control_value.rs  discrete.rs  interval.rs  lib.rs  midi_source.rs  midi_source_value.rs  mode.rs  target.rs  test_util.rs  transformation.rs  types.rs  unit.rs  util.rs
src/base/: control_value.rs  discrete.rs  feedback_value.rs  fraction.rs  interval.rs  lazy_val.rs  mod.rs  ui_util.rs  unit.rs  util.rs
src/mode/: absolute.rs  absolute_mode.rs  common.rs  feedback_util.rs  mod.rs  mode.rs  mode_applicability.rs  mode_context.rs  mode_struct.rs  press_duration_processor.rs  relative.rs  relative_mode.rs  target.rs  test_util.rs  toggle.rs  toggle_mode.rs  transformation.rs  universal_mode.rs
src/mode/value_sequence/: base.rs  mod.rs  parser.rs
src/source/: color_util.rs  feedback_script.rs  midi_source.rs  midi_source_script.rs  midi_source_value.rs  mod.rs  osc_source.rs  osc_source_value.rs  raw_midi.rs  source_context.rs  sys_ex.rs  test_util.rs
src/source/devices/: launchpad.rs  mod.rs  twister.rs  x_touch.rs
