[package]
name = "helgoboss-learn"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2018"

[dependencies]
helgoboss-midi = "*"
num = "0.2.1"
num_enum = "0.5.0"
approx = "0.3.2"
derive_more = "0.99.5"
enum-iterator = "0.6.0"
serde = { version = "1.0", features = ["derive"] , optional = true }
serde_repr = { version = "0.1.5", optional = true }
lazycell = "1.2"
# For being able to exclude some fields from the hash function (necessary for ignoring already learned sources)
derivative = "2.1.1"
# For OSC
rosc = "*"
# For letting the here defined raw MIDI data structure implement the REAPER MIDI event type
reaper-low = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master", optional = true }
# For tokenizing sys-ex patterns
logos = "0.12.0"