[package]
name = "helgoboss-learn"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"

[dependencies]
helgoboss-midi = "*"
num = "0.2.1"
num_enum = "0.5.0"
approx = "0.3.2"
derive_more = "0.99.5"
enum-iterator = "0.6.0"
serde = { version = "1.0", features = ["derive"] , optional = true }
serde_repr = { version = "0.1.5", optional = true }
# For being able to (de)serialize using FromStr
serde_with = { version = "1.6.4", optional = true }
lazycell = "1.2"
# For being able to exclude some fields from the hash function (necessary for ignoring already learned sources)
derivative = "2.2.0"
# For OSC
rosc = "0.5.1"
# For letting the here defined raw MIDI data structure implement the REAPER MIDI event type
#reaper-low = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master", optional = true }
 reaper-low = { path = "../../../../reaper-rs/main/low", optional = true }
# For tokenizing sys-ex patterns
logos = "0.12.0"
partial-min-max = "0.4.0"
nom = "7.0.0"
regex = "1"
once_cell = "1.4.0"
# For convenient converting of OSC feedback arg prop to enum variant and back
strum = "0.23"
strum_macros = "0.23"