[package]
name = "helgoboss-learn"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"

[dependencies]
helgoboss-midi.workspace = true
num = "0.2.1"
num_enum.workspace = true
approx.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_repr.workspace = true
# For being able to (de)serialize using FromStr
serde_with.workspace = true
lazycell.workspace = true
# For being able to exclude some fields from the hash function (necessary for ignoring already learned sources)
derivative.workspace = true
# For OSC
rosc.workspace = true
# For letting the here defined raw MIDI data structure implement the REAPER MIDI event type
reaper-low = { workspace = true, optional = true }
# For tokenizing sys-ex patterns
logos.workspace = true
# For easy error types
thiserror.workspace = true
partial-min-max = "0.4.0"
nom.workspace = true
regex.workspace = true
once_cell.workspace = true
# For convenient converting of OSC feedback arg prop to enum variant and back
strum.workspace = true
serde_json.workspace = true